--- a/index.html
+++ b/index.html
@@ -7,7 +7,45 @@
   </head>
 
   <body>
-    <p>Hello world We are developers </p>
+    <main>
+      <div id="header">
+        
+        <div class="navbar">
+          <img  id="header-img" src="images/logo.png">
+          <a href="#form">Features</a>
+          <a href="#howItWorks">How It Works</a>
+          <a href="#about">Pricing</a>
+        </div> 
+      </div>
+      <div id="form">
+        <h1>Handcrafted, home-made masterpieces</h1>
+        <form>
+        <input type="text" placeholder="Enter your email address"></br>
+        <button>GET STARTED</button>
+        </form>
+      </div>
+      <div id="howItWorks">
+        <li>
+          <ul>
+            <h2>Premium Materials</h2>
+            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.  
+            </p>
+         </ul>
+          <ul> 
+            <h2>Fast Shipping</h2>
+            <p>OWe make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.   
+            </p>
+          </ul>
+          <ul>
+            <h2>Quality Assurance</h2>
+            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.   
+            </p>
+          </ul>
+        </li>
+
+      </div>
+
+    </main>
 	<script  src="js/index.js"></script>
 	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
   </body>
