Finished the web page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img  id="header-img" src="images/logo.png">
           <a href="#form">Features</a>
           <a href="#howItWorks">How It Works</a>
-          <a href="#about">Pricing</a>
+          <a href="#pricing">Pricing</a>
         </div> 
       </div>
       <div id="form">
@@ -25,75 +25,75 @@
         </form>
       </div>
       <div id="howItWorks">
-        <li>
-          <ul>
+        <ul>
+          <li>
             <h2>Premium Materials</h2>
             <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.  
             </p>
-         </ul>
-          <ul> 
+          </li>
+          <li> 
             <h2>Fast Shipping</h2>
             <p>OWe make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.   
             </p>
-          </ul>
-          <ul>
+          </li>
+          <li>
             <h2>Quality Assurance</h2>
             <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.   
             </p>
-          </ul>
-        </li>
+          </li>
+        </ul>
         <section id="how-it-works"> 
-          <iframe id="video" height="315" src="https://youtu.be/y8Yv4pnO7qc" frameborder="0" allowfullscreen>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
           </iframe>
         </section>
 
-
+        
         <section id="pricing">
           <div class="product" id="tenor">
-            <div class="level">Tenor Trombone</div>
+            <div><h1>Tenor Trombone</h1></div>
             <h2>$600</h2>
-            <ol>
+            <ul>
               <li>Lorem ipsum.</li>
               <li>Lorem ipsum.</li>
               <li>Lorem ipsum dolor.</li>
               <li>Lorem ipsum.</li>
-            </ol>
+            </ul>
             <button class="btn">Select</button>
           </div>
 
 
           <div class="product" id="bass">
-            <div class="level">Bass Trombone</div>
+            <div class="level"><h1>Bass Trombone</h1></div>
             <h2>$900</h2>
-            <ol>
+            <ul>
               <li>Lorem ipsum.</li>
               <li>Lorem ipsum.</li>
               <li>Lorem ipsum dolor.</li>
               <li>Lorem ipsum.</li>
-            </ol>
+            </ul>
             <button class="btn">Select</button>
           </div>
 
 
           <div class="product" id="valve">
-            <div class="level">Valve Trombone</div>
+            <div class="level"><h1>Valve Trombone</h1></div>
             <h2>$1200</h2>
-            <ol>
+            <ul>
               <li>Plays similar to a Trumpet</li>
               <li>Great for Jazz Bands</li>
               <li>Lorem ipsum dolor.</li>
               <li>Lorem ipsum.</li>
-            </ol>
+            </ul>
             <button class="btn">Select</button>
           </div>
 
         </section>
         <footer>
-          <ul>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
+          <div class="button-navbar">
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">Contact</a>
+          </div>
           <span>Copyright 2016, Original Trombones</span>
         </footer>
 
